--- a/client/index.html
+++ b/client/index.html
@@ -15,13 +15,13 @@
       <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
       <!-- endbower -->
     <!-- endbuild -->
-    <!-- build:css({.tmp,client}) app/app.css -->
-    <link rel="stylesheet" href="app/app.css">
+    <!-- build:css({.tmp,client}) assets/app.css -->
+    <link rel="stylesheet" href="assets/stylesheets/app.css">
       <!-- injector:css -->
-      <link rel="stylesheet" href="app/account/login/login.css">
-      <link rel="stylesheet" href="app/admin/admin.css">
-      <link rel="stylesheet" href="app/app.css">
-      <link rel="stylesheet" href="app/main/main.css">
+      <link rel="stylesheet" href="assets/stylesheets/admin.css">
+      <link rel="stylesheet" href="assets/stylesheets/app.css">
+      <link rel="stylesheet" href="assets/stylesheets/login.css">
+      <link rel="stylesheet" href="assets/stylesheets/main.css">
       <!-- endinjector -->
     <!-- endbuild -->
   </head>
