--- a/client/index.html
+++ b/client/index.html
@@ -22,13 +22,23 @@
     <!-- endbuild -->
   </head>
   <body ng-app="mtpApp">
-    <!--[if lt IE 7]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
+    <div class="wrapper">
+        <!--[if lt IE 7]>
+        <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
 
-    <div ng-include='"components/navbar/navbar.html"'></div>
-    <!-- Add your site or application content here -->
-    <div ng-view=""></div>
+        <div ng-include='"components/navbar/navbar.html"'></div>
+        <div ng-view=""></div>
+        <footer class="footer">
+            <div class="container">
+                <p>
+                    <a href='https://github.com/FlorianGrundig'>Florian Grundig</a> |
+                    <a href='https://github.com/FlorianGrundig/mtp/issues?state=open'>Issues</a>
+
+                </p>
+            </div>
+        </footer>
+    </div>
 
     <!--[if lt IE 9]>
     <script src="bower_components/es5-shim/es5-shim.js"></script>
@@ -55,6 +65,7 @@
           <script src="app/account/settings/settings.js"></script>
           <script src="app/account/signup/signup.js"></script>
           <script src="app/admin/admin.js"></script>
+          <script src="app/home/home.js"></script>
           <script src="app/main/main.js"></script>
           <script src="components/auth/auth.js"></script>
           <script src="components/auth/user.js"></script>
