--- a/client/index.html
+++ b/client/index.html
@@ -69,6 +69,8 @@
           <script src="app/main/main.js"></script>
           <script src="components/auth/auth.js"></script>
           <script src="components/auth/user.js"></script>
+          <script src="components/category.js"></script>
+          <script src="components/exercise.js"></script>
           <script src="components/navbar/navbar.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
