reintroduced mongoose to avoid extra backend

--- a/client/index.html
+++ b/client/index.html
@@ -71,6 +71,7 @@
           <script src="components/auth/user.js"></script>
           <script src="components/category.js"></script>
           <script src="components/exercise.js"></script>
+          <script src="components/mongoose-error/mongoose-error.js"></script>
           <script src="components/navbar/navbar.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
