--- a/client/index.html
+++ b/client/index.html
@@ -13,8 +13,11 @@
     <!-- build:css(client) app/vendor.css -->
       <!-- bower:css -->
       <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
+      <link rel="stylesheet" href="bower_components/cal-heatmap/cal-heatmap.css" />
       <!-- endbower -->
     <!-- endbuild -->
+     <link rel="stylesheet" href="bower_components/angular-slider/slider.css" />
+
     <!-- build:css({.tmp,client}) assets/app.css -->
       <!-- injector:css -->
       <link rel="stylesheet" href="assets/stylesheets/app.css">
@@ -28,7 +31,7 @@
         <![endif]-->
 
         <div ng-include='"components/navbar/navbar.html"'></div>
-        <div ng-view=""></div>
+        <div class="main" ng-view=""></div>
         <footer class="footer">
             <div class="container">
                 <p>
@@ -54,6 +57,9 @@
       <script src="bower_components/angular-route/angular-route.js"></script>
       <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
       <script src="bower_components/lodash/dist/lodash.compat.js"></script>
+      <script src="bower_components/angular-slider/slider.js"></script>
+      <script src="bower_components/d3/d3.js"></script>
+      <script src="bower_components/cal-heatmap/cal-heatmap.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
 
@@ -67,6 +73,7 @@
           <script src="app/admin/admin.js"></script>
           <script src="app/home/home.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/training/training.js"></script>
           <script src="components/auth/auth.js"></script>
           <script src="components/auth/user.js"></script>
           <script src="components/category.js"></script>
