enabled and simple use of ui.router instead of angular router

--- a/client/index.html
+++ b/client/index.html
@@ -31,7 +31,7 @@
         <![endif]-->
 
         <div ng-include='"components/navbar/navbar.html"'></div>
-        <div class="main" ng-view=""></div>
+        <div class="main" ui-view=""></div>
         <footer class="footer">
             <div class="container">
                 <p>
@@ -60,6 +60,7 @@
       <script src="bower_components/angular-slider/slider.js"></script>
       <script src="bower_components/d3/d3.js"></script>
       <script src="bower_components/cal-heatmap/cal-heatmap.js"></script>
+      <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
 
