better modularization with angular-ui states

--- a/client/index.html
+++ b/client/index.html
@@ -75,6 +75,7 @@
           <script src="app/home/home.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/training/training.js"></script>
+          <script src="app/training/training_exercise.js"></script>
           <script src="components/auth/auth.js"></script>
           <script src="components/auth/user.js"></script>
           <script src="components/category.js"></script>
